When the nav drawer is open, disable the button that opens the drawer. This is necessary since the drawer covers the button and ensures a consistent tab order when the button is used to open the drawer.
Also adding a visual cue that the button has focus (same as :hover)

--- a/src/js/header.less
+++ b/src/js/header.less
@@ -56,8 +56,12 @@ header {
     border: 0;
     border-radius: 50%;
     cursor: pointer;
-    &:focus { outline: 0; }
-    &:hover { background: @control_bg; }
+
+    &:focus,
+    &:hover {
+      background: @control_bg;
+      outline: 0;
+    }
 
     -webkit-appearance: none;
     -moz-appearance: none;
